# CheremshaDecrypt

./: .gitmodules  build.gradle  happkeys.txt  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/nodejs-assets/nodejs-project/: main.js  package.json
app/nodejs-assets/nodejs-project/public/data/: keytable.json
app/nodejs-assets/nodejs-project/public/emu/: unicorn_aarch64.js
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  unicorn_bridge.cpp
app/src/main/java/com/github/cheremsha/decrypt/crypt/app/: MainActivity.kt
app/src/main/java/com/github/cheremsha/decrypt/crypt/app/crypto/: ApiKeyManager.kt  ApiProvider.kt  Crypt5Pipeline.kt  DecryptApi.kt  HappDecryptor.kt  HappyDecoderApi.kt  Keys.kt  NodeCrypt5Bridge.kt  UnicornBridge.kt
app/src/main/java/com/github/cheremsha/decrypt/crypt/app/network/: SubFetcher.kt
app/src/main/java/com/github/cheremsha/decrypt/crypt/app/parser/: VpnConfigParser.kt
app/src/main/java/com/github/cheremsha/decrypt/crypt/app/ui/: HomeScreen.kt  LogsScreen.kt  MainViewModel.kt  MatrixRain.kt  OnboardingScreen.kt  SettingsScreen.kt
app/src/main/java/com/github/cheremsha/decrypt/crypt/app/ui/theme/: Theme.kt
app/src/main/java/com/github/cheremsha/decrypt/crypt/app/util/: AppLogger.kt
app/src/main/java/su/happ/proxyutility/util/: ErrorCodeJNIWrapper.kt
app/src/main/java/su/happ/proxyutility/util/protection/: EncryptedSubUrlHelper.kt
app/src/main/res/values/: strings.xml  themes.xml
